2011-10-31  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update and publish msys-gettext, msys-libiconv.
	Correct versioning issue with mingw32-{gettext,libiconv}.

	* msys/msys-gettext.xml: Update to 0.18.1.1-1.
	* msys/msys-libiconv.xml: Update to 1.14-1.
	* msys/issue.log: Updated accordingly.
	* mingw32/mingw32-gettext.xml: Version 0.18.1.1-2 requires
	at least version 1.14-2 of mingw32-libiconv-dll-2.
	* mingw32/mingw32-libiconv.xml: VErsion 1.14-2 requires at
	least version 0.18.1.1-2 of mingw32-libintl-dll-8.
	* mingw32/issue.log: Updated accordingly.

2011-10-24  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish msys-autoconf.

	* msys/msys-autoconf.xml: Update to 2.68-1.
	* msys/issue.log: Updated accordingly.

2011-10-22  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mingw32-libiconv, mingw32-gettext.

	* mingw32/mingw32-libiconv.xml: Update to 1.14-2.
	* mingw32/mingw32-gettext.xml: Update to 0.18.1.1-2.
	* mingw32/issue.log: Updated accordingly.

2011-10-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-gdb.

	* mingw32/mingw32-gdb.xml: Update to 7.3.1-1.
	* mingw32/issue.log: Updated accordingly.

2011-10-14  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish msys-zlib, msys-bzip2.

	* msys/msys-zlib.xml: Update to zlib-1.2.5-1.
	* msys/msys-bzip2.xml: Update to bzip2-1.0.6-1.
	* msys/issue.log: Update accordingly.

2011-10-14  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mingw32-zlib, mingw32-bzip2, mingw32-xz.

	* mingw32/mingw32-zlib.xml: Update to zlib-1.2.5-4.
	* mingw32/mingw32-bzip2.xml: Update to bzip2-1.0.6-4.
	* mingw32/mingw32-xz.xml: Update to xz-5.0.3-2.
	* mingw32/issue.log: Update accordingly.

2011-10-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make "source" and "licence" tarname resolution deterministic.

	* mingw32/mingw32-autoconf.xml (source, licence): Append ".%" to