@@ -48,8 +48,7 @@
   c22c976533d4437a89af9a11c2bb188506f85952 2011101100 mingw32-mingw-utils.xml
   397021010754b50cdbbe5d5003b1f6217158ec8e 2010083100 mingw32-mpc.xml
   c35e6513fa814743400729714413bd749ff148ef 2010083100 mingw32-mpfr.xml
-  7a8b98d11ae578a3822c1a48f64493b69b20f0b6 2011091600 mingw32-package-list.xml
-  7f7474478d1ca1464d391beb0bd574a48a745315 2011101100 mingw32-pdcurses.xml
+  ce8330eee748d725ad00be146166e753e9ce9d12 2011110100 mingw32-package-list.xml
   f04e64fef62d2dac423b664b3d502ef36e34074c 2011101100 mingw32-pexports.xml
   2dc9b22e0a53267bd4f764100b4d01b740f3aa87 2011101100 mingw32-popt.xml
   9399cb6c2efd8fd907c42a278a6f41bbde9e440c 2011091400 mingw32-pthreads-w32.xml
